# git-commit-ai

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/git_commit_ai/: __init__.py  cli.py  config.py  git.py  llm.py  prompt.py
