[project]
name = "git-commit-ai"
version = "0.1.0"
description = "自动生成高质量 Git 提交信息的 CLI 工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
git-commit-ai = "git_commit_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_commit_ai"]
